SigmaCodebackup3rdSep/objects/Sigma_Order__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders (AccountId)</relationshipLabel>
        <relationshipName>Sigma_Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Reference_Email__c</fullName>
        <label>Account Reference Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Subscription_Interval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Subscription Interval</label>
        <referenceTo>Account_Subscription_Intervals__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Subscription</label>
        <referenceTo>Account_Subscription__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Commission_Euro__c</fullName>
        <label>Agency Commission Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Commission__c</fullName>
        <label>Agency Commission</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Allocate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>Total_Order_Amount__c - Paid_Amount__c</formula>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPersonNew__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sigma Orders (Billing Person)</relationshipLabel>
        <relationshipName>Sigma_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sigma Orders (Billing Contact)</relationshipLabel>
        <relationshipName>Sigma_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Person_Formula__c</fullName>
        <formula>BillingPersonNew__r.FirstName +&quot; &quot;+  BillingPersonNew__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Person__c</fullName>
        <label>Billing Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brewer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brewer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders (Brewer Account)</relationshipLabel>
        <relationshipName>Sigma_Orders5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brewery_User_Formula__c</fullName>
        <formula>IF(OR(ISNULL(Brewer_Account__c), ISBLANK(Brewer_Account__c)) ,0,IF(Brewer_Account__c = $User.Account_Id__c,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brewery User Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sigma Orders (Contact)</relationshipLabel>
        <relationshipName>Sigma_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerAddress__c</fullName>
        <label>CustomerAddress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Formula__c</fullName>
        <formula>AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Customer</fullName>
                </value>
                <value>
                    <fullName>Credit Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders (Customer)</relationshipLabel>
        <relationshipName>Sigma_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivary_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_New__c</fullName>
        <label>Discount(%)</label>
        <summarizedField>Product_Order_Price_Book__c.Discounts__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Order_Price_Book__c.Back_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>Total_Amount_With_Tax__c  -  Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>EffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Net_Amount__c</fullName>
        <label>Exchange Net Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Discount_Amount_Euro__c</fullName>
        <label>Proposal Discount Amount Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Discount_Amount__c</fullName>
        <label>Proposal Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fully_Packaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Packaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Amount_Euro__c</fullName>
        <label>Gross Amount Euro</label>
        <summarizedField>Product_Order_Price_Book__c.Cost_Euro__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <label>Gross Amount</label>
        <summarizedField>Product_Order_Price_Book__c.Cost__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsPrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrinted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <formula>If($User.Account_Id__c = Brewer_Account__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Refund_Date_Time__c</fullName>
        <label>Last Refund Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_level_Discount_Euro__c</fullName>
        <label>Product level Discount Euro</label>
        <summarizedField>Product_Order_Price_Book__c.Discount_Euro__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Line_level_Discount__c</fullName>
        <label>Product level Discount</label>
        <summarizedField>Product_Order_Price_Book__c.Discount__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount_Euro__c</fullName>
        <label>Location Level Discount Euro</label>
        <summarizedField>Product_Order_Price_Book__c.Location_Level_Discount_Euro__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount__c</fullName>
        <label>Location Level Discount</label>
        <summarizedField>Product_Order_Price_Book__c.Location_Level_Discount__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <formula>IMAGE( &apos;/resource/mindlinkslogo&apos;,&apos;images&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagentoOrderId__c</fullName>
        <label>MagentoOrderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders (Merchant Account)</relationshipLabel>
        <relationshipName>Sigma_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <label>Net Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Picking_Package_Shipment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Pick,Pack,Ship Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderIdForSoup__c</fullName>
        <label>OrderIdForSoup</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderSoupEntryId__c</fullName>
        <label>OrderSoupEntryId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Cancel_Date__c</fullName>
        <label>Order Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Created_Via__c</fullName>
        <label>Order Created Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web_Order</fullName>
                    <default>true</default>
                    <label>Web_Order</label>
                </value>
                <value>
                    <fullName>M-POS</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Time Based Inventory</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Service Quote</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Firstname__c</fullName>
        <label>Order Firstname</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Lastname__c</fullName>
        <label>Order Lastname</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Numbers__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Telephone__c</fullName>
        <label>Order Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <default>true</default>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_cancel_comments__c</fullName>
        <label>Order cancel comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_cancel_reason__c</fullName>
        <label>Order cancel reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Orders_Status__c</fullName>
        <label>Orders Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Charges_Comments__c</fullName>
        <label>Other Charges Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Euro__c</fullName>
        <label>Other Charges Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Charges__c</fullName>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Discount_Comments__c</fullName>
        <label>Other Discount Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Discount_Euro__c</fullName>
        <label>Other Discount Euro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Discount__c</fullName>
        <label>Other Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Packaged_Status__c</fullName>
        <label>Packaged Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sigma Orders (Parent Account)</relationshipLabel>
        <relationshipName>Sigma_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentId__c</fullName>
        <label>PaymentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentSoupEntryId__c</fullName>
        <label>PaymentSoupEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Made_to_BP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Made to BP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postpaid</fullName>
                    <default>true</default>
                    <label>Postpaid</label>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Procedure_Name__c</fullName>
        <label>Procedure Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sigma Orders (Products Name)</relationshipLabel>
        <relationshipName>Sigma_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Quote</label>
        <referenceTo>Service_Quote__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Amount__c</fullName>
        <label>Shipment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>ShippingCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>ShippingCountry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>ShippingPostalCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>ShippingState</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Code__c</fullName>
        <label>Shipping Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visits</label>
        <referenceTo>Site_Visits__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stopped_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stopped Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StoreName__c</fullName>
        <label>StoreName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>Tax_Treatment__c</referenceTo>
        <relationshipLabel>Sigma Orders</relationshipLabel>
        <relationshipName>Sigma_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProductPrice__c</fullName>
        <label>Total ProductPrice</label>
        <summarizedField>Product_Order_Price_Book__c.Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Order_Price_Book__c.Back_Order__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Euro__c</fullName>
        <formula>Gross_Amount_Euro__c  +  Other_Charges_Euro__c  -  Field_Discount_Amount_Euro__c  -  Other_Discount_Euro__c-  Line_level_Discount_Euro__c  -  Location_Level_Discount_Euro__c  -  Agency_Commission_Euro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_With_Tax__c</fullName>
        <formula>Net_Amount__c     +  Total_Order_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Gross_Amount__c+Other_Charges__c -Field_Discount_Amount__c -Other_Discount__c -Line_level_Discount__c -Location_Level_Discount__c- Agency_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <label>Total Order Amount</label>
        <summarizedField>Product_Order_Price_Book__c.Total_Order_Amount__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Tax__c</fullName>
        <label>Total Order Tax</label>
        <summarizedField>Product_Order_Price_Book__c.tax_amount__c</summarizedField>
        <summaryForeignKey>Product_Order_Price_Book__c.Sigma_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Payable_Amount__c</fullName>
        <label>Backorder Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>With_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this Sales order is for Consignment Order or Normal order.</description>
        <label>With Delivery</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>